syntax = "proto3";

package envoy.extensions.resource_monitors.downstream_connections.v3;

import "xds/annotations/v3/status.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.resource_monitors.downstream_connections.v3";
option java_outer_classname = "DownstreamConnectionsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Downstream connections]
// [#extension: envoy.resource_monitors.downstream_connections]

// The downstream connections resource monitor tracks the global number of open downstream connections.
message DownstreamConnectionsConfig {
  option (xds.annotations.v3.message_status).work_in_progress = true;

  // Maximum threshold for global open active downstream connections, defaults to 0.
  // If monitor is configured via Overload manager api and has no value set, Envoy will reject all incoming connections.
  int64 max_active_downstream_connections = 1 [(validate.rules).int64 = {gt: 0}];
}
